fix: wrong background color (#4)
* fix: wrong background color

* feat: add source code link to footer

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -16,7 +16,9 @@
 	justify-content: center;
 	width: 100vw;
 	height: 100vh;
+}
 
+body {
 	color: var(--color);
 	background: var(--base);
 }
